# zlogs

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  roteiro.md  zlogs.cabal
app/: Main.hs
src/ZLogs/: Application.hs  Model.hs  Processing.hs
