cabal-version: 3.0
name: zlogs
version: 0.1.0.0
build-type: Simple
license: MIT
author: Projeto academico
maintainer: exemplo@local
synopsis: Sistema centralizado de processamento de logs em Haskell e Yesod
category: Web

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints

library
    import: warnings
    exposed-modules:
        ZLogs.Application
        ZLogs.Model
        ZLogs.Processing

    hs-source-dirs: src

    build-depends:
        base >=4.14 && <5
      , async >=2.2
      , blaze-html
      , bytestring
      , deepseq
      , monad-logger
      , persistent
      , persistent-postgresql
      , persistent-template
      , text
      , time
      , yesod

    default-language: Haskell2010

executable zlogs
    import: warnings

    main-is: Main.hs
    hs-source-dirs: app

    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

    build-depends:
        base >=4.14 && <5
      , zlogs

    default-language: Haskell2010